@@ -6,7 +6,7 @@ use 5.014;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.60';
+our $VERSION = '1.61';
 
 use Carp qw(confess cluck);
 use DateTime;
@@ -643,7 +643,7 @@ Travel::Status::DE::IRIS - Interface to IRIS based web departure monitors.
 
 =head1 VERSION
 
-version 1.60
+version 1.61
 
 =head1 DESCRIPTION
 
